--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,290 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.layout {
+  width: 1900px;
+  height: 1080px;
+  display: grid;
+  grid-template-rows: repeat(8, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  gap: 8px;
+  
+  }
+  .layout div {
+    border: 3px solid black;
+    font-weight: bold;
+    text-align: center;
+    }
+
+  .layout img {
+    position: relative;
+    
+  }
+
+  .layout button {
+    -webkit-border-radius: 30;
+    -moz-border-radius: 30;
+    border-radius: 30px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    background: #131ccf;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    margin-bottom: 10px;
+    margin-left: 80px;
+  }
+  
+  .layout button:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+  
+
+  .header {
+    padding-top: .5em;
+    padding-bottom: .5em;
+    border: 1px solid #a2a2a2;
+    background-color: #f4f4f4;
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    min-height: 100vh;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  
+  
+  h2,
+  h3,
+  a {
+    color: #34495e;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  
+  
+  .logo {
+    margin: 0;
+    font-size: 1.45em;
+  }
+  
+  .main-nav {
+    margin-top: 5px;
+  
+  }
+  .logo a,
+  .main-nav a {
+    padding: 10px 15px;
+    text-transform: uppercase;
+    text-align: center;
+    display: block;
+  }
+  
+  .main-nav a {
+    color: #34495e;
+    font-size: .99em;
+  }
+  
+  .main-nav a:hover {
+    color: #718daa;
+  }
+  
+  
+  
+  .header {
+    padding-top: .5em;
+    padding-bottom: .5em;
+    border: 1px solid #a2a2a2;
+    background-color: #f4f4f4;
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+  }
+
+  
+@media (min-width: 769px) {
+	.header,
+	.main-nav {
+		display: flex;
+	}
+	.header {
+		flex-direction: column;
+		align-items: center;
+    	.header{
+		width: 80%;
+		margin: 0 auto;
+		max-width: 1150px;
+	}
+	}
+
+}
+
+@media (min-width: 1025px) {
+	.header {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+}
+
+.h1ForMain {
+  position: absolute;
+  margin-left: 850px;
+  font-family: Bitter, serif;
+  font-size: 56px;
+  font-weight: bold;
+  color: rgba(255, 255, 255, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+  text-shadow: 0px 5px 2px rgba(0,0,0,0.6);
+}
+  
+.h2ForMain {
+  position: absolute;
+  margin-left: 760px;
+  margin-top: 200px;
+  font-family: Bitter, serif;
+  font-size: 45px;
+  font-weight: bold;
+  color: rgba(255, 255, 255, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+  text-shadow: 0px 5px 2px rgba(0,0,0,0.6);
+}
+.css-input {
+  position: relative;
+  padding: 0;
+  margin-left: 15px;
+  font-size: 18px;
+  border-width: 1px;
+  border-color: #CCCCCC;
+  background-color: #FFFFFF;
+  color: #000000;
+  border-style: solid;
+  border-radius: 15px;
+  text-align: center;
+}
+.css-input:focus {
+  outline:none;
+}
+
+.label-input {  
+  margin-left: 15px;
+  font-family: Bitter, serif;
+  font-size: 21px;
+  font-weight: 300;
+  color: rgba(3, 3, 3, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+}
+
+.img-for-input {
+  position: absolute;
+}
+
+.h1ForInput {
+  position: inherit;
+  margin-left: 25px;
+}
+.inputbutton {
+  -webkit-border-radius: 30;
+  -moz-border-radius: 30;
+  border-radius: 30px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 16px;
+  background: #131ccf;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin-bottom: 10px;
+  margin-left: 40px;
+}
+
+.inputbutton button:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.container {
+  margin-top: 50px;
+  margin-left: 25px;
+  font-family: Bitter, serif;
+  font-size: 21px;
+  font-weight: bold;
+  color: rgba(3, 3, 3, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+  
+}
+.grid-container {
+  width: 1920px;
+  height: 1080px;
+  display: grid;
+  grid-template-rows: repeat(3, 90px);
+  grid-template-columns: repeat(3, 240px);
+  gap: 8px;
+  margin-left: 700px;
+  font-family: Bitter, serif;
+  font-size: 21px;
+  font-weight: bold;
+  color: rgba(3, 3, 3, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+  text-align: center;
+  
+}
+
+.grid-container p {
+ border: 1px solid black;
+}
+
+
